- fix bug delegate overflow

--- a/src/assets/scss/aura-theme/popup.scss
+++ b/src/assets/scss/aura-theme/popup.scss
@@ -20,7 +20,7 @@
       }
       .box-staking.aura-form {
         @media (max-width: 414px) {
-          margin-bottom: 120px;
+          min-height: 725px;
         }
       }
 
